Thu Sep 18 16:02:47 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          Added a -I for $TAO_ROOT.

Thu Sep 18 15:15:31 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          Added section for !built_in_topics.

Thu Sep 18 00:10:40 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          Fixed incorrect capitalization (s/BuiltIn/Builtin/g).

        * java/tests/multirepo/multirepo_test.mpc:

          Added workaround for vc71, vc8.

Wed Sep 17 19:39:27 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * AUTHORS:
        * java/tests/multirepo:
        * java/tests/multirepo/MultiRepo.idl:
        * java/tests/multirepo/multirepo_test.mpc:
        * java/tests/multirepo/multirepo_test_Export.h:

          Added initial idl and for Java multi-repo testing.

Wed Sep 17 18:47:00 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dcps_java.mpb:
        * MPC/config/dcps_java_bits.mpb:
        * bin/dcps_ts.pl:
        * java/build_scripts/JavaTypeSupportImpl.pm:
        * java/dds/dcps_java.mpc:
        * java/dds/dcps_java_optional.mpb:

          Enabled built-in topics for Java applications.

        * MPC/config/idl2jni.mpb:
        * java/tao/tao_java.mpc:
        * java/tests/hello/hello_java_client.mpc:
        * java/tests/messenger/messenger_idl/messenger_idl_test.mpc:

          Updated comments.

        * java/idl2jni/tests/simple/idl2jni_test_simple.mpc:
        * java/idl2jni/tests/simple/simple.mpc:

          Removed this file.  It has been renamed to idl2jni_test_simple.mpc.

Wed Sep 17 17:52:18 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * docs/INSTALL:

          Clarified instructions for Solaris.

        * java/dds/dcps_java.mpc:
        * java/tao/tao_java.mpc:
        * java/tests/hello/hello_java_client.mpc:
        * java/tests/messenger/messenger_idl/messenger_idl_test.mpc:
